fix horizontal scroll on code-schoosl page/smallscrns

--- a/components/Cards/SchoolCard/SchoolCard.css
+++ b/components/Cards/SchoolCard/SchoolCard.css
@@ -19,7 +19,7 @@
 
 @media screen and (--small-viewport) {
   .SchoolCard {
-    width: 100%;
+    width: 75vw;
   }
 }
 
